# Group_15_GAD

./: .gitignore  DESIGN.md  Group 15 Presentation  Group 15 Presentation.pptx  Group15SRS.html  README.md  alembic.ini  gad.jsx  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_analyses_table.py  0003_add_nri_counties_table.py
backend/: app.py  cache.py  http_session.py  requirements-dev.txt  requirements.txt
backend/data/: nri_sample.csv
backend/db/: __init__.py  models.py  nri_loader.py  seed.py  seed_data.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_export.py  test_routes.py  test_utils.py
